# rust-first-crud

./: README.md  source.txt
web-app/: Cargo.toml  README.md
web-app/sql/: 01-create-schema.sql
web-app/src/_tests/: model_db.rs  model_todo.rs
web-app/src/model/: db.rs  todo.rs
